# iot-esphome-rfid

./: .gitignore  README.md  pyproject.toml
esphome_project/: esp32s_rfid.yaml  secrets-example.yaml
esphome_project/example/: esp32s_example.yaml
